# sg-curriculum

./: CBSP21.md  README.md  pyproject.toml
.cbsp21/: exemptions.json  patch_input.json.example
.github/: copilot-instructions.md
.github/workflows/: cbsp21_coverage_gate.yml  cbsp21_pr_gate.yml  core_ci.yml
contracts/: CHANGELOG.md  assignment_v1.schema.json  assignment_v1.schema.sha256  attachments_manifest_v1.schema.json  attachments_manifest_v1.schema.sha256  coach_feedback_v1.schema.json  coach_feedback_v1.schema.sha256  curriculum_catalog_v1.schema.json  curriculum_catalog_v1.schema.sha256  groove_layer_control_v0.schema.json  groove_layer_control_v0.schema.sha256  session_record_v1.schema.json  session_record_v1.schema.sha256
data/: sgc.sqlite3
docs/: COACH_TRACE_POLICY_v1.md  CURRICULUM_GOVERNANCE_v1.md  DATA_RETENTION_POLICY_v1.md
fixtures/groove_v0/: README.md
fixtures/groove_v0/acceptance/: assertions.json
runtime/: __init__.py  attachments.py  cli.py  config.py  db.py  engine.py  identity.py  policy.py  store.py
scripts/cbsp21/: cbsp21_coverage_check.py  cbsp21_coverage_with_audit.py  check_patch_packet_format.py
scripts/ci/: check_cbsp21_gate.py  check_contracts_governance.py  check_no_toolbox_terms.py
scripts/dev/: init_local_db.py
src/sg_coach/: __init__.py  coach_policy.py  models.py
src/sg_groove/: __init__.py  groove_layer.py  models.py  window_eval.py
tests/: test_cli_smoke.py  test_coach_policy.py  test_db_roundtrip.py  test_groove_v0.py  test_identity.py  test_policy_basic.py  test_stem_match.py
(+10 files in other folders)
