[project]
name = "sg-curriculum"
version = "0.2.0"
description = "Local-first Smart Guitar curriculum runtime (device-local identity + SQLite)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
sgc = "runtime.cli:main"

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["runtime*", "sg_coach*", "sg_groove*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
